[cssom] Correct serialization of an+b selectors

According to https://drafts.csswg.org/css-syntax/#serializing-anb, if a
is 1 or -1 the number should be omitted. We did not follow this, causing
us to fail parts of external/wpt/css/cssom/selectorSerialize.html.
Change our behavior to match the spec and the test.

Bug: 818475
Change-Id: Ie0f44e2a3fb51069aad492096138020b67359982
Reviewed-on: https://chromium-review.googlesource.com/948066
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Chris Nardi <cnardi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540827}
Former-commit-id: 17768ebe63c708c4ae6d2cc68dfda81b3a2b2dda